Fixed Cropped Top on Small Devices

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ html, body
 #PagesContainer
 {
     display: table-row;
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
     width: 100%;
 }
