--- a/src/components/Styles/Login.css
+++ b/src/components/Styles/Login.css
@@ -1,9 +1,6 @@
 #Login
 {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -16,6 +13,8 @@
     background-color: rgba(8, 50, 236, 0.418);
     border-radius: 5px;
     width: fit-content;
+    margin: auto;
+    padding-bottom: 10px;
 }
 
 #LoginUserIcon
