--- a/src/components/Styles/Register.css
+++ b/src/components/Styles/Register.css
@@ -1,9 +1,6 @@
 #Register
 {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -16,6 +13,8 @@
     background-color: rgba(31, 9, 230, 0.342);
     border-radius: 5px;
     width: fit-content;
+    margin: auto;
+    padding-bottom: 10px;
 }
 
 #RegisterUserIcon
