--- a/src/components/Styles/home.css
+++ b/src/components/Styles/home.css
@@ -1,12 +1,26 @@
 #Home
 {
-    display: table;
+    display: block;
     width: 100%;
     height: 100%;
     background-image: url("../../media/bg_mob.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: auto;
+}
+
+#HomeBody
+{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+#HomeContent
+{
+    display: block;
+    margin: auto;
 }
 
 #Home h1
@@ -24,16 +38,6 @@
     text-align: center;
     margin-left: 50px;
     margin-right: 50px;
-}
-
-#HomeBody
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    overflow: auto;
 }
 
 #HomeFooter
